--- a/app/src/main/res/layout/dialog_create_user.xml
+++ b/app/src/main/res/layout/dialog_create_user.xml
@@ -25,7 +25,7 @@
 				android:layout_marginTop="25dp"
 				android:orientation="vertical">
 
-				<com.google.android.material.textview.MaterialTextView
+				<androidx.appcompat.widget.AppCompatTextView
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:textColor="@color/black_title"
@@ -46,7 +46,7 @@
 						android:layout_height="wrap_content"
 						android:orientation="horizontal">
 
-						<com.google.android.material.textview.MaterialTextView
+						<androidx.appcompat.widget.AppCompatTextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:textSize="@dimen/font_15"
@@ -81,7 +81,7 @@
 						android:orientation="horizontal"
 						android:visibility="visible">
 
-						<com.google.android.material.textview.MaterialTextView
+						<androidx.appcompat.widget.AppCompatTextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:textSize="@dimen/font_15"
@@ -117,7 +117,7 @@
 						android:layout_marginTop="10dp"
 						android:visibility="gone">
 
-						<com.google.android.material.textview.MaterialTextView
+						<androidx.appcompat.widget.AppCompatTextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:textSize="@dimen/font_15"
