--- a/app/src/main/res/layout/fragment_functionbar.xml
+++ b/app/src/main/res/layout/fragment_functionbar.xml
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
+                <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -68,7 +68,7 @@
                         android:paddingEnd="10dp"
                         android:orientation="vertical">
 
-                        <com.google.android.material.textview.MaterialTextView
+                        <androidx.appcompat.widget.AppCompatTextView
                             android:id="@+id/user_name_tv"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -79,7 +79,7 @@
                             android:singleLine="true"
                             android:layout_weight="0.8" />
 
-                        <com.google.android.material.textview.MaterialTextView
+                        <androidx.appcompat.widget.AppCompatTextView
                             android:id="@+id/user_mode_tv"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -107,7 +107,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
+                <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -163,7 +163,7 @@
                             android:singleLine="true"
                             android:layout_weight="0.8"/>
 
-                        <com.google.android.material.textview.MaterialTextView
+                        <androidx.appcompat.widget.AppCompatTextView
                             android:id="@+id/game_list_tpis_tv"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -213,7 +213,7 @@
                         android:paddingEnd="10dp"
                         android:orientation="vertical">
 
-                        <com.google.android.material.textview.MaterialTextView
+                        <androidx.appcompat.widget.AppCompatTextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="left|center"
@@ -255,7 +255,7 @@
                         android:paddingEnd="10dp"
                         android:orientation="vertical">
 
-                        <com.google.android.material.textview.MaterialTextView
+                        <androidx.appcompat.widget.AppCompatTextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="left|center"
@@ -275,7 +275,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
+                <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -320,7 +320,7 @@
                         android:paddingEnd="10dp"
                         android:orientation="vertical">
 
-                        <com.google.android.material.textview.MaterialTextView
+                        <androidx.appcompat.widget.AppCompatTextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="left|center|bottom"
@@ -330,7 +330,7 @@
                             android:singleLine="true"
                             android:layout_weight="0.8" />
 
-                        <com.google.android.material.textview.MaterialTextView
+                        <androidx.appcompat.widget.AppCompatTextView
                             android:id="@+id/library_state_tv"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -358,7 +358,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
+                <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -403,7 +403,7 @@
                         android:paddingStart="10dp"
                         android:paddingEnd="10dp">
 
-                        <com.google.android.material.textview.MaterialTextView
+                        <androidx.appcompat.widget.AppCompatTextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="left|center"
