--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,7 +2,7 @@
 <resources>
     <string-array name="arrays">
         <item>离线模式</item>
-        <item>正版登录</item>
+        <item>Mojang账户</item>
         <item>微软登录</item>
     </string-array>
 
