--- a/app/src/main/res/drawable/ic_pencil_black.xml
+++ b/app/src/main/res/drawable/ic_pencil_black.xml
@@ -4,11 +4,11 @@
 	android:height="24dp"
 	android:viewportHeight="24"
 	android:viewportWidth="24"
-	android:tint="?android:colorControlNormal"
+	android:tint="@color/black"
 	android:autoMirrored="true">
 
 		<path
-			android:fillColor="#ff000000"
+			android:fillColor="@color/black"
 			android:pathData="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"/>
 
 </vector>
