--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff83b2ff</color>
-    <color name="colorPrimaryDark">#ff83a2ff</color>
-    <color name="colorAccent">#ff83b2ff</color>
+    <color name="colorPrimary">#83B3FF</color>
+    <color name="colorPrimaryDark">#83B3FF</color>
+    <color name="colorAccent">#83B3FF</color>
 
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_500">#83B3FF</color>
+    <color name="purple_700">#83B3FF</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
 
