--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -7,20 +7,6 @@
 	android:orientation="vertical"
 	android:background="@drawable/background_layout_fictionlist">
 
-	<com.google.android.material.appbar.AppBarLayout
-		android:elevation="4dp"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-		<com.google.android.material.appbar.MaterialToolbar
-			android:id="@+id/toolbar"
-			android:layout_width="match_parent"
-			android:layout_height="30dp"
-			android:minHeight="?android:attr/actionBarSize"
-			android:theme="?android:attr/actionBarTheme"/>
-
-	</com.google.android.material.appbar.AppBarLayout>
 
 	<LinearLayout
         android:layout_width="match_parent"
@@ -29,10 +15,10 @@
         android:background="#00FFFFFF"
         android:orientation="vertical">
 
-        <ListView
+        <com.launcher.hamcl.views.PullListView
             android:id="@+id/users_lv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
