--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -44,7 +44,10 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
-    <style name="BoatTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="BoatTheme" parent="Theme.HAMCL">
+        <item name="colorPrimary">@color/black_text</item>
+        <item name="colorPrimaryVariant">@color/black_text</item>
+        <item name="colorOnPrimary">@color/black_text</item>
     </style>
     <style name="FullScreenTheme" parent="@android:style/Theme.Holo.Light.NoActionBar">
         <item name="android:windowFullscreen">true</item>
