--- a/app/src/main/res/layout/adapter_version_library.xml
+++ b/app/src/main/res/layout/adapter_version_library.xml
@@ -1,34 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:background="?android:attr/selectableItemBackgroundBorderless"
-	android:layout_height="wrap_content"
-	android:layout_width="match_parent"
-	android:id="@+id/rl_all"
-	android:padding="10dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/rl_all">
 
-	<TextView
-		android:id="@+id/tv_id"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginLeft="10dp"
-		android:textSize="15dp"/>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:clickable="true"
+        android:id="@+id/card_down"
+        android:elevation="5dp"
+        app:cardCornerRadius="4dp">
 
-	<TextView
-		android:id="@+id/tv_type"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_centerHorizontal="true"
-		android:textSize="15dp"/>
+        <LinearLayout
+            android:id="@+id/item_version_ll"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:gravity="center">
 
-	<ImageView
-		android:id="@+id/iv_other"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_alignParentRight="true"
-		android:layout_marginRight="10dp"
-		android:src="@drawable/ic_arrow_right_white"
-		android:background="?android:attr/selectableItemBackgroundBorderless"/>
 
-</RelativeLayout>
+            <ImageView
+                android:src="@drawable/steve_pic"
+                android:layout_height="35dp"
+                android:id="@+id/version_type_pic"
+                android:layout_width="35dp"
+                android:layout_centerVertical="true"
+                android:layout_margin="5dp" />
 
+            <LinearLayout
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1.0">
+
+                <TextView
+                    android:id="@+id/tv_id"
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:gravity="center_vertical"
+                    android:layout_weight="1.0"
+                    android:text="1.12.2"
+                    android:textColor="@color/black_text"
+                    android:textStyle="normal"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/tv_type"
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:gravity="center_vertical"
+                    android:text="1.12.34567"
+                    android:layout_weight="1.0"
+                    android:typeface="normal"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
