--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,8 @@
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSurface">@color/white</item>
+        <item name="materialAlertDialogTheme">@style/Theme.MaterialComponents.Dialog.Alert</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
@@ -21,6 +23,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:navigationBarColor">?android:colorPrimary</item>
         <item name="activityChooserViewStyle">@style/Theme.MaterialComponents.DayNight.DarkActionBar</item>
+
     </style>
 
     <style name="AppTheme.NoActionBar">
