--- a/app/src/main/res/layout/adapter_user.xml
+++ b/app/src/main/res/layout/adapter_user.xml
@@ -47,10 +47,9 @@
                     android:layout_width="match_parent"
                     android:gravity="center_vertical"
                     android:layout_weight="1.0"
-                    android:text="1.12.2"
                     android:textColor="@color/black_text"
-                    android:textStyle="bold"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/font_14"
+                    android:text="1.12.2"/>
 
                 <TextView
                     android:id="@+id/tv_usertype"
@@ -59,10 +58,11 @@
                     android:gravity="center_vertical"
                     android:text="1.12.34567"
                     android:layout_weight="1.0"
-                    android:typeface="normal"
-                    android:textSize="14sp" />
+                    android:textColor="@color/black_text"
+                    android:textSize="@dimen/font_14" />
 
             </LinearLayout>
+
             <com.google.android.material.button.MaterialButton
                 style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="50dp"
@@ -71,6 +71,9 @@
                 app:icon="@drawable/ic_delete_black"
                 android:theme="@style/BoatTheme"
                 android:layout_height="50dp"/>
+
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
+
 </LinearLayout>
