--- a/app/src/main/res/layout/adapter_version.xml
+++ b/app/src/main/res/layout/adapter_version.xml
@@ -73,7 +73,7 @@
             android:layout_margin="5dp"
             android:layout_marginLeft="10dp"/>
 
-        <Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/menu_setting"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content" />
