--- a/app/src/main/res/layout/adapter_version_library.xml
+++ b/app/src/main/res/layout/adapter_version_library.xml
@@ -6,11 +6,11 @@
     android:id="@+id/rl_all">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_down"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:clickable="true"
-        android:id="@+id/card_down"
         android:elevation="5dp"
         app:cardCornerRadius="4dp">
 
@@ -20,14 +20,13 @@
             android:layout_width="match_parent"
             android:gravity="center">
 
-
             <ImageView
-                android:src="@drawable/steve_pic"
-                android:layout_height="35dp"
                 android:id="@+id/version_type_pic"
+                android:layout_height="35dp"
                 android:layout_width="35dp"
+                android:layout_margin="5dp"
                 android:layout_centerVertical="true"
-                android:layout_margin="5dp" />
+                android:src="@drawable/steve_pic"/>
 
             <LinearLayout
                 android:layout_height="wrap_content"
@@ -41,11 +40,11 @@
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:gravity="center_vertical"
-                    android:layout_weight="1.0"
                     android:text="1.12.2"
                     android:textColor="@color/black_text"
                     android:textStyle="normal"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:layout_weight="1.0"/>
 
                 <TextView
                     android:id="@+id/tv_type"
@@ -60,5 +59,7 @@
             </LinearLayout>
 
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
+
 </LinearLayout>
