--- a/app/src/main/res/layout/fragment_functionbar.xml
+++ b/app/src/main/res/layout/fragment_functionbar.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/background_layout_fictionlist"
+    android:background="@drawable/background_layout_frctionlist_line"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -195,32 +195,32 @@
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
                     android:paddingStart="10dp"
-                    android:paddingEnd="10dp">
+                    android:paddingTop="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingBottom="10dp">
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:layout_height="40dp"
                         android:layout_width="40dp"
-                        android:src="@drawable/buildplate"/>
+                        android:layout_height="40dp"
+                        android:src="@drawable/buildplate" />
 
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:orientation="vertical"
                         android:paddingStart="10dp"
-                        android:paddingEnd="10dp"
-                        android:orientation="vertical">
+                        android:paddingEnd="10dp">
 
                         <androidx.appcompat.widget.AppCompatTextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="left|center"
+                            android:singleLine="true"
+                            android:text="@string/fb_version_list"
                             android:textColor="@color/black_text"
-                            android:textSize="@dimen/font_13"
-                            android:text="@string/fb_game_list"
-                            android:singleLine="true" />
+                            android:textSize="@dimen/font_13" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -258,23 +258,11 @@
                         <androidx.appcompat.widget.AppCompatTextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_weight="0.8"
                             android:gravity="left|center"
                             android:singleLine="true"
-                            android:text="@string/fb_game_path"
+                            android:text="@string/fb_download"
                             android:textColor="@color/black_text"
                             android:textSize="@dimen/font_13" />
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/path_state_tv"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="left|center|top"
-                            android:singleLine="true"
-                            android:text="未检测到游戏数据"
-                            android:textColor="@color/black_text"
-                            android:textSize="@dimen/font_9" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
